# gs4u-telegram-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
gs4u_telegram_bot/: example_tg.py  main.py
gs4u_telegram_bot/g2s-server-players/: __init__.py  server_players.db
gs4u_telegram_bot/g2s-server-players/mock/: index_2_players.html
gs4u_telegram_bot/gs4u_server_players/: __init__.py
gs4u_telegram_bot/gs4u_server_players/mock/: index_0_players.html  index_1_players.html  index_2_players.html  index_tdm_players.html
gs4u_telegram_bot/telegram_bot/: __init__.py  example_tg.py
