[tool.poetry]
name = "gs4u-telegram-bot"
version = "0.1.0"
description = ""
authors = ["dealenx <dealenx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
telegram = "^0.0.1"
pytelegrambotapi = "^4.23.0"
python-telegram-bot = "^21.7"
aiogram = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
